--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "node test.js"
+    "test": "ava"
   },
   "files": [
     "index.js"
@@ -26,7 +26,7 @@
     "os"
   ],
   "devDependencies": {
-    "ava": "^0.0.4"
+    "ava": "*"
   },
   "dependencies": {
     "arch": "^2.1.0"
