--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "ava"
+    "test": "xo && ava"
   },
   "files": [
     "index.js"
@@ -26,7 +26,8 @@
     "os"
   ],
   "devDependencies": {
-    "ava": "*"
+    "ava": "*",
+    "xo": "^0.18.2"
   },
   "dependencies": {
     "arch": "^2.1.0"
