--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "url": "https://github.com/kevva"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4"
   },
   "scripts": {
-    "test": "node test.js"
+    "test": "xo && ava"
   },
   "files": [
     "index.js"
@@ -25,7 +25,11 @@
     "object",
     "os"
   ],
+  "dependencies": {
+    "arch": "^2.1.0"
+  },
   "devDependencies": {
-    "ava": "^0.0.4"
+    "ava": "*",
+    "xo": "*"
   }
 }
